# rspack-binding

./: Cargo.toml  README.md  pnpm-lock.yaml
.claude/: settings.local.json
crates/binding/: Cargo.toml  index.d.ts  index.js
crates/binding/src/: lib.rs
crates/loader_compilation/: Cargo.toml
crates/loader_compilation/src/: lib.rs  options.rs  transformer.rs
crates/loader_compilation/src/transforms/: change_package_import.rs  env_replacement.rs  keep_export.rs  keep_platform.rs  mod.rs  named_import_transform.rs  node_transform.rs  remove_export.rs
crates/plugin_manifest/: Cargo.toml
crates/plugin_manifest/src/: plugin.rs
examples/use-loader/: build.js
examples/use-loader/src/: index.js
examples/use-plugin/: build.js
examples/use-plugin/src/: index.js
lib/: index.js
