[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
rspack_cacheable     = { version = "=0.5.2" }
rspack_collections   = { version = "=0.5.2" }
rspack_core          = { version = "=0.5.2" }
rspack_error         = { version = "=0.5.2" }
rspack_hook          = { version = "=0.5.2" }
rspack_loader_runner = { version = "=0.5.2" }
rspack_util          = { version = "=0.5.2" }

async-trait    = { version = "0.1" }
rspack_sources = { version = "0.4.8" }

rspack_binding_build          = { version = "=0.5.2" }
rspack_binding_builder        = { version = "=0.5.2" }
rspack_binding_builder_macros = { version = "=0.5.2" }

napi        = { version = "=3.2.2" }
napi-derive = { version = "=3.2.2" }

# SWC dependencies
swc_config = { version = "3.1.1", default-features = false }
swc_core = { version = "37.0.0", default-features = false, features = [
  "base",
  "ecma_ast",
  "common",
  "ecma_preset_env",
  "__visit",
  "parallel_rayon",
] }
swc_ecma_lexer = { version = "=23.0.1", default-features = false }
swc_error_reporters = { version = "16.0.1", default-features = false }


# Copied from https://github.com/web-infra-dev/rspack/blob/main/Cargo.toml

[profile.dev]
codegen-units = 16
debug         = 2
incremental   = true
panic         = "abort"

[profile.release]
codegen-units = 1
debug         = false
# Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
lto       = "fat"
opt-level = 3
panic     = "abort"
strip     = true
