[package]
name = "loader_compilation"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
either = "1.9"
rspack_cacheable.workspace = true
rspack_core.workspace = true
rspack_error.workspace = true
rspack_hook.workspace = true
rspack_collections.workspace = true
rspack_javascript_compiler = "=0.5.2"
rspack_loader_runner.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sugar_path = "1.2"
swc_config = { version = "3.1.1", default-features = false }
swc_core = { version = "37.0.0", default-features = false, features = [
  "base",  
  "ecma_ast",
  "common",
  "ecma_preset_env",
  "__visit",
  "parallel_rayon"
] }
swc_ecma_lexer = { version = "=23.0.1", default-features = false }
swc_error_reporters = { version = "16.0.1", default-features = false }
tracing = "0.1"

# Additional dependencies for transforms
regex = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
stacker = "0.1"