[package]
edition.workspace = true
name              = "loader_compilation"
version           = "0.1.0"

[features]
default = []
plugin = [
  # plugin_transform_host_native cannot be enabled directly to avoid wasmer dependency
  "swc_core/__plugin_transform_host",
  "swc_core/__plugin_transform_host_schema_v1",
  "swc_core/plugin_transform_host_native_filesystem_cache",
]

[dependencies]
async-trait.workspace          = true
either                         = "1.9"
rspack_cacheable.workspace     = true
rspack_collections.workspace   = true
rspack_core.workspace          = true
rspack_error.workspace         = true
rspack_hook.workspace          = true
rspack_javascript_compiler     = "=0.5.2"
rspack_loader_runner.workspace = true
rspack_util.workspace          = true
serde                          = { version = "1.0", features = ["derive"] }
serde_json                     = "1.0"
sugar_path                     = "1.2"
swc_config                     = { workspace = true }
swc_core                       = { workspace = true }
swc_ecma_lexer                 = { workspace = true }
swc_error_reporters            = { workspace = true }
tracing                        = "0.1"

# Additional dependencies for transforms
regex = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
stacker = "0.1"
