[package]
name = "plugin_manifest"
version = "0.1.0"
edition.workspace = true

[dependencies]
rspack_cacheable.workspace = true
rspack_core.workspace = true
rspack_error.workspace = true
rspack_hook.workspace = true
async-trait.workspace = true
rspack_sources.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tracing = "0.1"